Improved navigation by adding links

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -37,5 +37,10 @@
       <li>Spoon tomato mixture onto toasted bread slices.</li>
       <li>Serve immediately and enjoy!</li>
     </ol>
+    <br/>
+    <a href="./fettuccine.html">Go back to fettuccine</a>
+    <br/>
+    <br/>
+    <a href="../index.html">Homepage</a>
   </body>
 </html>
