--- a/recipes/fettuccine.html
+++ b/recipes/fettuccine.html
@@ -35,5 +35,7 @@
     <ul>
       <li><b>Appetizers: </b><a href="./bruschetta.html">Balsamic Bruschetta, <a href="./garlic_bread.html">Toasted Garlic Bread</a></li>
     </ul>
+    <br/>
+    <a href="../index.html">Homepage</a>
   </body>
 </html>
