--- a/recipes/porkolt.html
+++ b/recipes/porkolt.html
@@ -35,5 +35,7 @@
       <li>Pour the tomatoes with liquid and beef broth into a stockpot and place the pot over medium-high heat. Bring to a simmer and reduce heat to medium-low. Cook until the stew begins to thicken, stirring occasionally, about 90 minutes. Stir the sour cream into the stew just before serving.</li>
       <li>Bring a pot with lightly-salted water and bring to a rolling boil; add the egg noodles to the water and return to a boil. Cook uncovered, stirring occasionally, until the pasta has cooked through, but is still firm to the bite, about 5 minutes. Drain well in a colander set in the sink. Ladle the stew over the drained noodles to serve.</li>
     </ol>
+    <br/>
+    <a href="../index.html">Homepage</a>
   </body>
 </html>
